[package]
name = "brollup"
version = "0.1.0"
authors = ["Brock <brock@brollup.org>"]
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bech32 = "0.11.0"
bit-vec = "0.8.0"
bitcoin = "0.32.5"
bitcoincore-rpc = "0.19.0"
blake2 = "0.10.6"
bls_on_arkworks = "0.3.0"
chrono = "0.4.39"
colored = "2.2.0"
easy-upnp = "0.2.0"
futures = "0.3.31"
hex = "0.4.3"
nostr-sdk = "0.37.0"
rand = "0.8.5"
reqwest = "0.12.9"
secp = { version = "0.4.1", default-features = false, features = ["k256", "serde"] }
serde = "1.0.216"
serde_json = "1.0.134"
sha2 = "0.10.8"
sled = "0.34.7"
tokio = { version = "1.40.0", features = ["full"] }
uint = { version = "0.9", default-features = false }

[lib]
name = "brollup"
path = "src/lib.rs"

[[bin]]
name = "brollup"
path = "src/operative/main.rs"
