[package]
name = "brollup"
version = "0.1.0"
authors = ["Brock <brock@bits.app>", "Ben <codingqi@gmail.com>"]
edition = "2021"

[dependencies]
bit-vec = "0.8.0"
hex = "0.4.3"
lazy_static = "1.5.0"
musig2 = "0.0.11"
ripemd = "0.1.3"
secp_dep = { package = "secp", version = "0.3.0" }
secp256k1 = "0.29.0"
sha2 = { version = "0.10.8", default-features = false }
uintx = "0.1.0"

[lib]
name = "brollup"
path = "src/lib.rs"
